fixed some margins on mobile viewport

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -32,7 +32,16 @@ h6 {
 
 .big-heading {
   font-size: 4.5rem;
-  margin: 80px 0;
+  margin: 80px 0 30px;
+}
+
+@media (max-width: 762px) {
+  .big-heading {
+    font-size: 2.7rem;;
+  }
+  .header-subtitle {
+    font-size: 1.3rem;
+  }
 }
 
 .heading-subtitle {
@@ -50,6 +59,7 @@ h6 {
 
 .profile-img {
   border-radius: 100%;
+  margin: 20px 0;
   width: 30%;
 }
 
@@ -61,7 +71,7 @@ h6 {
 
 .header-subtitle {
   line-height: 2;
-  margin: 4% 0 2%;
+  margin: 20px 0;
 }
 
 .section-heading {
